--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
 Host git.fourbs.net
     User git
-    Hostname cameron.home.fourbs.net
-    Port 22
+    Hostname git.fourbs.net
+    Port 2222
 
 Host ovirt.syd
 	User ovirt-vmconsole
