--- a/.config/alacritty/alacritty.base.yaml
+++ b/.config/alacritty/alacritty.base.yaml
@@ -64,7 +64,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: "SF Mono Powerline"
+    family: "Hack"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -75,7 +75,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "SF Mono Powerline"
+    family: "Hack"
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -86,7 +86,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "SF Mono Powerline"
+    family: "Hack"
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
@@ -475,3 +475,4 @@ key_bindings:
   - { key: F11,      mods: Super,   chars: "\x1b[23;3~"                      }
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
   - { key: NumpadEnter,             chars: "\n"                              }
+
