--- a/.config/sway/config
+++ b/.config/sway/config
@@ -17,10 +17,10 @@ font $uifont
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 exec swayidle -w \
-        timeout 300 'swaylock -f ' \
-        timeout 600 'swaymsg "output * dpms off"' \
+        timeout 300 'lock' \
+        timeout 1200 'swaymsg "output * dpms off"' \
              resume 'swaymsg "output * dpms on"' \
-        before-sleep 'swaylock -f '
+        before-sleep 'lock'
 
 ### Input configuration
 #
@@ -43,6 +43,9 @@ exec swayidle -w \
 #
     # Start a terminal
     bindsym $mod+Return exec $term
+
+    # Lock
+    bindsym $mod+Alt+l exec 'lock'
 
     # Kill focused window
     bindsym $mod+Shift+q kill
