--- a/.config/alacritty/alacritty.popup.yaml
+++ b/.config/alacritty/alacritty.popup.yaml
@@ -32,9 +32,6 @@ window:
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: true
 
-  # Allow terminal applications to change Alacritty's window title.
-  dynamic_title: true
-
   # Window decorations
   #
   # Values for `decorations`:
@@ -47,6 +44,9 @@ window:
   decorations: none
 
   startup_mode: Windowed
+
+  # Allow terminal applications to change Alacritty's window title.
+  dynamic_title: true
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -67,8 +67,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    # family: "SF Mono Powerline"
-    family: "Inconsolata for Powerline"
+    family: "SF Mono Powerline"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -79,7 +78,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Inconsolata for Powerline"
+    family: "SF Mono Powerline"
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -90,13 +89,13 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Inconsolata for Powerline"
+    family: "SF Mono Powerline"
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
 
   # Point size
-  size: 13
+  size: 10
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -476,3 +475,32 @@ key_bindings:
   - { key: F11,      mods: Super,   chars: "\x1b[23;3~"                      }
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
   - { key: NumpadEnter,             chars: "\n"                              }
+# Colors (Gotham)
+colors:
+  # Default colors
+  primary:
+    background: '0x0a0f14'
+    foreground: '0x98d1ce'
+
+  # Normal colors
+  normal:
+    black:   '0x0a0f14'
+    red:     '0xc33027'
+    green:   '0x26a98b'
+    yellow:  '0xedb54b'
+    blue:    '0x195465'
+    magenta: '0x4e5165'
+    cyan:    '0x33859d'
+    white:   '0x98d1ce'
+
+  # Bright colors
+  bright:
+    black:   '0x10151b'
+    red:     '0xd26939'
+    green:   '0x081f2d'
+    yellow:  '0x245361'
+    blue:    '0x093748'
+    magenta: '0x888ba5'
+    cyan:    '0x599caa'
+    white:   '0xd3ebe9'
+
