--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -44,7 +44,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background, but no title bar buttons
-  decorations: none
+  decorations: full
 
   startup_mode: Windowed
 
@@ -67,8 +67,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    # family: "SF Mono Powerline"
-    family: "Inconsolata for Powerline"
+    # family: "San Francisco Mono"
+    # family: "Inconsolata for Powerline"
+    family: Menlo
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -79,7 +80,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Inconsolata for Powerline"
+    family: Menlo
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -90,7 +91,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Inconsolata for Powerline"
+    family: Menlo
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
@@ -199,26 +200,6 @@ mouse:
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: false
 
-  url:
-    # URL launcher
-    #
-    # This program is executed when clicking on a text which is recognized as a URL.
-    # The URL is always added to the command as the last parameter.
-    #
-    # When set to `None`, URL launching will be disabled completely.
-    #
-    # Default:
-    #   - (macOS) open
-    #   - (Linux) xdg-open
-    #   - (Windows) explorer
-    #launcher: xdg-open
-
-    # URL modifiers
-    #
-    # These are the modifiers that need to be held down for opening URLs when clicking
-    # on them. The available modifiers are documented in the key binding section.
-    modifiers: None
-
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
@@ -250,8 +231,9 @@ live_config_reload: true
 #   - (Linux/macOS) /bin/bash --login
 #   - (Windows) powershell
 shell:
-  program: /usr/bin/fish
+  program: /usr/bin/env
   args:
+    - fish
     - --login
 
 # Windows 10 ConPTY backend (Windows only)
