--- a/.config/alacritty/alacritty.popup.yaml
+++ b/.config/alacritty/alacritty.popup.yaml
@@ -475,32 +475,32 @@ key_bindings:
   - { key: F11,      mods: Super,   chars: "\x1b[23;3~"                      }
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
   - { key: NumpadEnter,             chars: "\n"                              }
-# Colors (Gotham)
+# Colors (Ayu Mirage)
 colors:
   # Default colors
   primary:
-    background: '0x0a0f14'
-    foreground: '0x98d1ce'
+    background: '#202734'
+    foreground: '#CBCCC6'
 
   # Normal colors
   normal:
-    black:   '0x0a0f14'
-    red:     '0xc33027'
-    green:   '0x26a98b'
-    yellow:  '0xedb54b'
-    blue:    '0x195465'
-    magenta: '0x4e5165'
-    cyan:    '0x33859d'
-    white:   '0x98d1ce'
+    black: '#191E2A'
+    red: '#FF3333'
+    green: '#BAE67E'
+    yellow: '#FFA759'
+    blue: '#73D0FF'
+    magenta: '#FFD580'
+    cyan: '#95E6CB'
+    white: '#C7C7C7'
 
   # Bright colors
   bright:
-    black:   '0x10151b'
-    red:     '0xd26939'
-    green:   '0x081f2d'
-    yellow:  '0x245361'
-    blue:    '0x093748'
-    magenta: '0x888ba5'
-    cyan:    '0x599caa'
-    white:   '0xd3ebe9'
+    black: '#686868'
+    red: '#F27983'
+    green: '#A6CC70'
+    yellow: '#FFCC66'
+    blue: '#5CCFE6'
+    magenta: '#FFEE99'
+    cyan: '#95E6CB'
+    white: '#FFFFFF'
 
