nvim config improvements.

--- a/.config/alacritty/alacritty.popup.yaml
+++ b/.config/alacritty/alacritty.popup.yaml
@@ -198,26 +198,6 @@ mouse:
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: false
 
-  url:
-    # URL launcher
-    #
-    # This program is executed when clicking on a text which is recognized as a URL.
-    # The URL is always added to the command as the last parameter.
-    #
-    # When set to `None`, URL launching will be disabled completely.
-    #
-    # Default:
-    #   - (macOS) open
-    #   - (Linux) xdg-open
-    #   - (Windows) explorer
-    #launcher: xdg-open
-
-    # URL modifiers
-    #
-    # These are the modifiers that need to be held down for opening URLs when clicking
-    # on them. The available modifiers are documented in the key binding section.
-    modifiers: None
-
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
@@ -475,32 +455,32 @@ key_bindings:
   - { key: F11,      mods: Super,   chars: "\x1b[23;3~"                      }
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
   - { key: NumpadEnter,             chars: "\n"                              }
-# Colors (Ayu Mirage)
+# Colors (Gotham)
 colors:
   # Default colors
   primary:
-    background: '#202734'
-    foreground: '#CBCCC6'
+    background: '0x0a0f14'
+    foreground: '0x98d1ce'
 
   # Normal colors
   normal:
-    black: '#191E2A'
-    red: '#FF3333'
-    green: '#BAE67E'
-    yellow: '#FFA759'
-    blue: '#73D0FF'
-    magenta: '#FFD580'
-    cyan: '#95E6CB'
-    white: '#C7C7C7'
+    black:   '0x0a0f14'
+    red:     '0xc33027'
+    green:   '0x26a98b'
+    yellow:  '0xedb54b'
+    blue:    '0x195465'
+    magenta: '0x4e5165'
+    cyan:    '0x33859d'
+    white:   '0x98d1ce'
 
   # Bright colors
   bright:
-    black: '#686868'
-    red: '#F27983'
-    green: '#A6CC70'
-    yellow: '#FFCC66'
-    blue: '#5CCFE6'
-    magenta: '#FFEE99'
-    cyan: '#95E6CB'
-    white: '#FFFFFF'
+    black:   '0x10151b'
+    red:     '0xd26939'
+    green:   '0x081f2d'
+    yellow:  '0x245361'
+    blue:    '0x093748'
+    magenta: '0x888ba5'
+    cyan:    '0x599caa'
+    white:   '0xd3ebe9'
 
