--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -67,9 +67,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    # family: "San Francisco Mono"
+    # family: "SF Mono Powerline"
     # family: "Inconsolata for Powerline"
-    family: Menlo
+    family: "Iosevka Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -80,7 +80,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Menlo
+    family: "Iosevka Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -91,7 +91,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Menlo
+    family: "Iosevka Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
@@ -231,9 +231,8 @@ live_config_reload: true
 #   - (Linux/macOS) /bin/bash --login
 #   - (Windows) powershell
 shell:
-  program: /usr/bin/env
+  program: /usr/bin/fish
   args:
-    - fish
     - --login
 
 # Windows 10 ConPTY backend (Windows only)
@@ -459,32 +458,32 @@ key_bindings:
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
   - { key: NumpadEnter,             chars: "\n"                              }
 
-# Colors (Iceberg)
+# Colors (Gotham)
 colors:
   # Default colors
   primary:
-    background: '0x101118'
-    foreground: '0xc6c8d1'
+    background: '0x0a0f14'
+    foreground: '0x98d1ce'
 
   # Normal colors
   normal:
-    black:   '0x161821'
-    red:     '0xe27878'
-    green:   '0xb4be82'
-    yellow:  '0xe2a478'
-    blue:    '0x84a0c6'
-    magenta: '0xa093c7'
-    cyan:    '0x89b8c2'
-    white:   '0xc6c8d1'
+    black:   '0x0a0f14'
+    red:     '0xc33027'
+    green:   '0x26a98b'
+    yellow:  '0xedb54b'
+    blue:    '0x195465'
+    magenta: '0x4e5165'
+    cyan:    '0x33859d'
+    white:   '0x98d1ce'
 
   # Bright colors
   bright:
-    black:   '0x6b7089'
-    red:     '0xe98989'
-    green:   '0xc0ca8e'
-    yellow:  '0xe9b189'
-    blue:    '0x91acd1'
-    magenta: '0xada0d3'
-    cyan:    '0x95c4ce'
-    white:   '0xd2d4de'
+    black:   '0x10151b'
+    red:     '0xd26939'
+    green:   '0x081f2d'
+    yellow:  '0x245361'
+    blue:    '0x093748'
+    magenta: '0x888ba5'
+    cyan:    '0x599caa'
+    white:   '0xd3ebe9'
 
