--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -458,32 +458,41 @@ key_bindings:
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
   - { key: NumpadEnter,             chars: "\n"                              }
 
-# Colors (Gotham)
+# Start flavours
+# Base16 Gruvbox dark, hard - alacritty color config
+# Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 colors:
   # Default colors
   primary:
-    background: '0x0a0f14'
-    foreground: '0x98d1ce'
+    background: '0x1d2021'
+    foreground: '0xd5c4a1'
+
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  cursor:
+    text: '0x1d2021'
+    cursor: '0xd5c4a1'
 
   # Normal colors
   normal:
-    black:   '0x0a0f14'
-    red:     '0xc33027'
-    green:   '0x26a98b'
-    yellow:  '0xedb54b'
-    blue:    '0x195465'
-    magenta: '0x4e5165'
-    cyan:    '0x33859d'
-    white:   '0x98d1ce'
+    black:   '0x1d2021'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xd5c4a1'
 
   # Bright colors
   bright:
-    black:   '0x10151b'
-    red:     '0xd26939'
-    green:   '0x081f2d'
-    yellow:  '0x245361'
-    blue:    '0x093748'
-    magenta: '0x888ba5'
-    cyan:    '0x599caa'
-    white:   '0xd3ebe9'
+    black:   '0x665c54'
+    red:     '0xfe8019'
+    green:   '0x3c3836'
+    yellow:  '0x504945'
+    blue:    '0xbdae93'
+    magenta: '0xebdbb2'
+    cyan:    '0xd65d0e'
+    white:   '0xfbf1c7'
 
+draw_bold_text_with_bright_colors: false
+# End flavours
