--- a/.config/alacritty/alacritty.base.yaml
+++ b/.config/alacritty/alacritty.base.yaml
@@ -69,7 +69,7 @@ font:
     #   - (Windows) Consolas
     # family: "SF Mono Powerline"
     # family: "Inconsolata for Powerline"
-    family: "Iosevka Nerd Font"
+    family: "Iosevka"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -80,7 +80,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Iosevka Nerd Font"
+    family: "Iosevka"
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -91,7 +91,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Iosevka Nerd Font"
+    family: "Iosevka"
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
@@ -168,7 +168,6 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
 
 # Mouse bindings
 #
