--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -48,8 +48,6 @@ window:
 
   startup_mode: Windowed
 
-  opacity: 1.0
-
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
@@ -71,7 +69,8 @@ font:
     #   - (Windows) Consolas
     # family: "SF Mono Powerline"
     # family: "Inconsolata for Powerline"
-    family: "Iosevka Nerd Font"
+    # family: "Iosevka Nerd Font"
+    family: "Iosevka"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -82,7 +81,8 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Iosevka Nerd Font"
+    # family: "Iosevka Nerd Font"
+    family: "Iosevka"
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -93,7 +93,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "Iosevka Nerd Font"
+    family: "Iosevka"
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
@@ -165,6 +165,11 @@ bell:
   animation: EaseOutExpo
   duration: 0
   color: '0xffffff'
+
+# Background opacity
+#
+# Window opacity as a floating point number from `0.0` to `1.0`.
+# The value `0.0` is completely transparent and `1.0` is opaque.
 
 # Mouse bindings
 #
@@ -454,41 +459,32 @@ key_bindings:
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
   - { key: NumpadEnter,             chars: "\n"                              }
 
-# Start flavours
-# Base16 Gruvbox dark, hard - alacritty color config
-# Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
+# Colors (Gotham)
 colors:
   # Default colors
   primary:
-    background: '0x1d2021'
-    foreground: '0xd5c4a1'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x1d2021'
-    cursor: '0xd5c4a1'
+    background: '0x0a0f14'
+    foreground: '0x98d1ce'
 
   # Normal colors
   normal:
-    black:   '0x1d2021'
-    red:     '0xfb4934'
-    green:   '0xb8bb26'
-    yellow:  '0xfabd2f'
-    blue:    '0x83a598'
-    magenta: '0xd3869b'
-    cyan:    '0x8ec07c'
-    white:   '0xd5c4a1'
+    black:   '0x0a0f14'
+    red:     '0xc33027'
+    green:   '0x26a98b'
+    yellow:  '0xedb54b'
+    blue:    '0x195465'
+    magenta: '0x4e5165'
+    cyan:    '0x33859d'
+    white:   '0x98d1ce'
 
   # Bright colors
   bright:
-    black:   '0x665c54'
-    red:     '0xfe8019'
-    green:   '0x3c3836'
-    yellow:  '0x504945'
-    blue:    '0xbdae93'
-    magenta: '0xebdbb2'
-    cyan:    '0xd65d0e'
-    white:   '0xfbf1c7'
+    black:   '0x10151b'
+    red:     '0xd26939'
+    green:   '0x081f2d'
+    yellow:  '0x245361'
+    blue:    '0x093748'
+    magenta: '0x888ba5'
+    cyan:    '0x599caa'
+    white:   '0xd3ebe9'
 
-draw_bold_text_with_bright_colors: false
-# End flavours
